correct Overlapping overlay on mobile #240

--- a/static/inventory.css
+++ b/static/inventory.css
@@ -331,7 +331,6 @@ a#exportLinks {
     position: absolute;
     top: 15px;
     left: 320px;
-    z-index: 1;
     margin-left: 10px;
     padding: 4px 6px;
     border: 1px solid #c8c8c8;
