--- a/static/units.css
+++ b/static/units.css
@@ -287,7 +287,6 @@
     position: absolute;
     top: 20px;
     left: 320px;
-    z-index: 1;
 }
 
 #exportLinks a.dropdown-toggle {
